# FlatKontrol

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  CONTRIBUTING.md  README.md  REUSE.toml  io.github.toservetheking.FlatKontrol.desktop  io.github.toservetheking.FlatKontrol.metainfo.xml  io.github.toservetheking.FlatKontrol.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  lint.yml  test.yml
autotests/: CMakeLists.txt  resolutiontest.cpp
icons/: CMakeLists.txt
keys/: flatkontrol.asc
src/: CMakeLists.txt  appcolorscheme.cpp  appcolorscheme.h  applicationsmodel.cpp  applicationsmodel.h  flatpakinstallations.cpp  flatpakinstallations.h  keyfile.cpp  keyfile.h  main.cpp  permissioncatalog.cpp  permissioncatalog.h  permissionscontroller.cpp  permissionscontroller.h  portalsbackend.cpp  portalsbackend.h
src/qml/: Main.qml  PermissionsPage.qml  SettingsPage.qml
